--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -119,6 +119,7 @@
               <li><a href="" target="_blank"><b>Stage 1: Acoustic Fingerprint of the Vehicle</b></a></li>
               <ul>
                 <li><a href="" target="_blank"><b>Definition of Automotive Sound Targets</b></a></li>
+                <li><a href="" target="_blank"><b>Multichannel Recording Solutions</b></a></li>
               </ul>
               <li><a href="" target="_blank"><b>Stage 2: Studies over the Virtual Acoustic Enviroment</b></a></li>
               <li><a href="" target="_blank"><b>Stage 3: In-situ Installation</b></a></li>
@@ -208,6 +209,18 @@
           <p class="mbr-text mbr-fonts-style display-7">
             During the first stage of the soundscape design developement the engineers will capture all the usefull in-situ and open road sounds of the vehicle.
             Specifing the targets of those captures is essential to guarantee a smooth and on focus study during the stage 2.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
           <h5>Definition of Automotive Sound Targets</h5>
           <br>
           Some of the most important automotive sound targets are listed below:
@@ -220,7 +233,22 @@
             <li><b>Vehicle External Sounds:</b> engine noises, tier/road</li>
           </ul>
           <p class="mbr-text mbr-fonts-style display-7">
-            
+
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <h5>Multichannel Recording Solutions</h5>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+
           </p>
         </div>
       </div>
@@ -310,17 +338,21 @@
             <li><a href="https://www.ee.columbia.edu/~dpwe/papers/Chown71-moving.pdf"><i><b>1971, J. M. Chowning - "The Simulation of Moving Sound Sources"</b></i></a></li>
             <li><a href="https://monoskop.org/images/d/d4/Schafer_R_Murray_The_Soundscape_Our_Sonic_Environment_and_the_Tuning_of_the_World_1994.pdf"><i><b>1994, R. Murray Schafer - "The soundscape: Our sonic environment and the tuning of the
                     world"</b></i></a></li>
-            <li><a href="https://www.researchgate.net/publication/344006275_Spatial_Hearing_The_Psychophysics_of_Human_Sound_Localization"><i><b>1996, J. Blauert - "Spatial Hearing: The Psychophysics of Human Sound Localization"</b></i></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>1996, M. Giordano - "Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili"</b></i></a></li>
+            <li><a href="https://www.researchgate.net/publication/344006275_Spatial_Hearing_The_Psychophysics_of_Human_Sound_Localization"><i><b>1996, J. Blauert - "Spatial Hearing: The Psychophysics of Human Sound Localization"</b></i></a>
+            </li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>1996, M. Giordano - "Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili"</b></i></a>
+            </li>
             <li><a href="http://www.asp.c.dendai.ac.jp/thesis/zTransfer-Function_Measurement_with_Sweeps_AES_2001443.PDF"><i><b>2001, S. Muller, P. Massarani - "Transfer-Function Measurement with Sweeps"</b></i></a></li>
             <li><a href="https://www.researchgate.net/publication/237067964_Directional_Audio_Coding_in_Spatial_Sound_Reproduction_and_Stereo_Upmixing"><i><b>2006, V. Pulkki - "Directional Audio Coding in Spatial Sound Reproduction and Stereo
                     Upmixing"</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Master_Handbook_of_Acoustics_5th_Edition_(2009)_(Everest).pdf"><i><b>2009, F. A. Everest, K. C. Pohlmann - "Master Handbook of Acoustics"</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/acoustics-for-engineers-2nd_troy-lectures.pdf"><i><b>2009, J. Blauert, N. Xiang - "Acoustics for Engineers"</b></i></a></li>
             <li><a href="http://www.angelofarina.it/Public/Fisica-Tecnica-Ambientale-2015/Lez-07/Cap.1_AcusticaInEdilizia.pdf"><i><b>2015, A. Farina - "Principi Base di Acustica, capitolo 1"</b></i></a></li>
-            <li><a href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>2017, J. Y. Hong, J. He, B. Lam, R. Gupta, W-S. Gan - "Spatial Audio for Soundscape Design: Recordingand
+            <li><a href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>2017, J. Y. Hong, J. He, B. Lam, R. Gupta, W-S. Gan - "Spatial Audio for Soundscape Design:
+                    Recordingand
                     Reproduction"</b></i></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/zotter_frank_ambisonic_2019.pdf"><i><b>2019, F. Zotter, M. Frank - "Ambisonic, A Practical 3D Audio Theory for Recording, Studio Production, Sound Reinforcement, and Virtual
+            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/zotter_frank_ambisonic_2019.pdf"><i><b>2019, F. Zotter, M. Frank - "Ambisonic, A Practical 3D Audio Theory for Recording, Studio Production, Sound Reinforcement, and
+                    Virtual
                     Reality"</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html"><i><b>2021, M. Giordano, G. K. Velitchkova - "Acoustic of Musical Enviroments"</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Cafe_OTO_Acoustic_Analysis_of_the_Environment.pdf"><i><b>2022, G. K. Velitchkova - "Cafe OTO, Acoustic Analysis of the Environment"</b></i></a></li>
@@ -329,11 +361,13 @@
             <strong>Automotive</strong>
           </h5>
           <ul>
-            <li><a href="https://www.academia.edu/4958143/SUBJECTIVE_COMPARISON_BETWEEN_STEREO_DIPOLE_AND_3D_AMBISONIC_SURROUND_SYSTEMS_FOR_AUTOMOTIVE_APPLICATIONS"><i><b>1999, A. Farina, E. Ugolotti - "Subjective comparison between Stereo Dipole and
+            <li><a href="https://www.academia.edu/4958143/SUBJECTIVE_COMPARISON_BETWEEN_STEREO_DIPOLE_AND_3D_AMBISONIC_SURROUND_SYSTEMS_FOR_AUTOMOTIVE_APPLICATIONS"><i><b>1999, A. Farina, E. Ugolotti - "Subjective comparison between Stereo
+                    Dipole and
                     3D
                     Ambisonics surround systems for automotive applications"</b></i></a></li>
             <li><a href="http://www.conforg.fr/acoustics2008/cdrom/data/fa2005-budapest/paper/694-0.pdf"><i><b>2005, H. Hansen, R. Weber, U. Letens - "Quantifying tonal phonomena in interior car sounds"</b></i></a></li>
-            <li><a href="https://www.academia.edu/22220504/Spatial_Audio_Quality_Evaluation_Comparing_Transaural_Ambisonics_and_Stereo"><i><b>2007, C. Guastavino, V. Larcher, G. Catusseau, P. Boussard - "Spatial Audio Quality Evaluation: Comparing
+            <li><a href="https://www.academia.edu/22220504/Spatial_Audio_Quality_Evaluation_Comparing_Transaural_Ambisonics_and_Stereo"><i><b>2007, C. Guastavino, V. Larcher, G. Catusseau, P. Boussard - "Spatial Audio Quality Evaluation:
+                    Comparing
                     Transaural, Ambisonics and Stereo"</b></i></a></li>
             <li><a href="https://hal.science/hal-00463369/document"><i><b>2009, J-F. Sciabica, M-C. Bezat, V. Roussarie, R. Kronland-Martinet, S. Ystad - "Towards the timbre modeling of interior car sound"</b></i></a></li>
             <li><a href="https://hal.science/hal-03324608/document"><i><b>2019, S. Denjean, R. Kronland-Martinet, V. Roussarie, S. Ystad - "Zero-Emission Vehicles Sonification Strategy Based on Shepard-Risset Glissando"</b></i></a></li>
@@ -386,8 +420,8 @@
 
 
   <section
-    style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a
-      href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
+    style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;">
+    <a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
     <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
 
 
