--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -225,6 +225,7 @@
           <br>
           Some of the most important automotive sound targets are listed below:
           <br>
+          <br>
           <ul>
             <li><b>Vehicle Acoustic Enviroment:</b> impulse response of the car</li>
             <li><b>Vehicle Physical Sounds:</b> tier/road sound, wind from speed</li>
@@ -248,7 +249,14 @@
           <h5>Multichannel Recording Solutions</h5>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
-
+            Multichannel solutions have been developped over the years that can be categorized in three approaches:
+            <br>
+            <br>
+          <ul>
+            <li><b>Direct:</b> </li>
+            <li><b>Non-parametric:</b> </li>
+            <li><b>Parametric:</b> </li>
+          </ul>
           </p>
         </div>
       </div>
