--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -253,9 +253,9 @@
             <br>
             <br>
           <ul>
-            <li><b>Direct:</b> those methods are the most commonly used by sound engineers and consist in manually arranging microphones and loudspeakers based on heuristics. Those methods will not be further detailed here because microphone and loudspeaker layouts are interdependent. []</li>
-            <li><b>Non-parametric:</b> those methods usually use linear transformation such as ambisonic. </li>
-            <li><b>Parametric:</b> those methods process microphone array signals in the time-frequency domain and estimate spatial parameters based on sound field models</li>
+            <li><b>Direct:</b> those methods are the most commonly used by sound engineers and consist in manually arranging microphones and loudspeakers based on heuristics. Those methods will not be further detailed here because microphone and loudspeaker layouts are interdependent.</li>
+            <li><b>Non-parametric:</b> those methods usually use linear transformation such as ambisonic. Input channels are encoded in the spherical harmonic domain and can further be decoded on any loudspeaker configuration</li>
+            <li><b>Parametric:</b> those methods process microphone array signals in the time-frequency domain and estimate spatial parameters based on sound field models. Parametric techniques are mainly used in spatial audio coding because they allow to downmix the recordings and achieve good perceptual reconstruction.</li>
           </ul>
           </p>
         </div>
