--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -249,7 +249,7 @@
           <h5>Multichannel Recording Solutions</h5>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
-            Multichannel solutions have been developped over the years that can be categorized in three approaches:
+            Multichannel solutions have been developed over the years that can be categorized in three approaches:
             <br>
             <br>
           <ul>
