--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -251,9 +251,11 @@
             <br>
             <br>
           <ul>
-            <li><b>Direct:</b> those methods are the most commonly used by sound engineers and consist in manually arranging microphones and loudspeakers based on heuristics. Those methods will not be further detailed here because microphone and loudspeaker layouts are interdependent.</li>
+            <li><b>Direct:</b> those methods are the most commonly used by sound engineers and consist in manually arranging microphones and loudspeakers based on heuristics. Those methods will not be further detailed here because microphone and
+              loudspeaker layouts are interdependent.</li>
             <li><b>Non-parametric:</b> those methods usually use linear transformation such as ambisonic. Input channels are encoded in the spherical harmonic domain and can further be decoded on any loudspeaker configuration</li>
-            <li><b>Parametric:</b> those methods process microphone array signals in the time-frequency domain and estimate spatial parameters based on sound field models. Parametric techniques are mainly used in spatial audio coding because they allow to downmix the recordings and achieve good perceptual reconstruction.</li>
+            <li><b>Parametric:</b> those methods process microphone array signals in the time-frequency domain and estimate spatial parameters based on sound field models. Parametric techniques are mainly used in spatial audio coding because they
+              allow to downmix the recordings and achieve good perceptual reconstruction.</li>
           </ul>
           </p>
         </div>
@@ -355,11 +357,11 @@
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/acoustics-for-engineers-2nd_troy-lectures.pdf"><i><b>2009, J. Blauert, N. Xiang - "Acoustics for Engineers"</b></i></a></li>
             <li><a href="http://www.angelofarina.it/Public/Fisica-Tecnica-Ambientale-2015/Lez-07/Cap.1_AcusticaInEdilizia.pdf"><i><b>2015, A. Farina - "Principi Base di Acustica, capitolo 1"</b></i></a></li>
             <li><a href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>2017, J. Y. Hong, J. He, B. Lam, R. Gupta, W-S. Gan - "Spatial Audio for Soundscape Design:
-                    Recordingand
-                    Reproduction"</b></i></a></li>
+                    Recording and Reproduction"</b></i></a></li>
+            <li><a href="https://ieeexplore.ieee.org/abstract/document/7911385/authors#authors"><i><b>2017, H. Hacihabiboglu, E. De Sena; Z. Cvetkovic, J. Johnston, J. O. Smith - "Perceptual Spatial Audio Recording, Simulation, and Rendering: An
+                    overview of spatial-audio techniques based on psychoacoustics"</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/zotter_frank_ambisonic_2019.pdf"><i><b>2019, F. Zotter, M. Frank - "Ambisonic, A Practical 3D Audio Theory for Recording, Studio Production, Sound Reinforcement, and
-                    Virtual
-                    Reality"</b></i></a></li>
+                    Virtual Reality"</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html"><i><b>2021, M. Giordano, G. K. Velitchkova - "Acoustic of Musical Enviroments"</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Cafe_OTO_Acoustic_Analysis_of_the_Environment.pdf"><i><b>2022, G. K. Velitchkova - "Cafe OTO, Acoustic Analysis of the Environment"</b></i></a></li>
           </ul>
