--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -228,7 +228,7 @@
           <br>
           <ul>
             <li><b>Vehicle Acoustic Enviroment:</b> impulse response of the car</li>
-            <li><b>Vehicle Physical Sounds:</b> tier/road sound, wind from speed</li>
+            <li><b>Vehicle Physical Sounds:</b> tier/road sound, aerodynamic noise</li>
             <li><b>Vehicle Mechanical Sounds:</b> ICE engine noises, vehicle speed, throttle opening, gearswitch, doors opening and other gadget sounds</li>
             <li><b>Vehicle Electric Sounds:</b> EV engine noises, battery cooling</li>
             <li><b>Vehicle External Sounds:</b> engine noises, tier/road</li>
