--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -175,7 +175,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            A soundscappe design developement approach has been proposed in <a href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>this publication</b></i></a>
+            A soundscape design developement approach has been proposed in <a href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>this publication</b></i></a>
             and it's graphic rappresentation is shown below:
           </p>
         </div>
@@ -257,6 +257,9 @@
             <li><b>Parametric:</b> those methods process microphone array signals in the time-frequency domain and estimate spatial parameters based on sound field models. Parametric techniques are mainly used in spatial audio coding because they
               allow to downmix the recordings and achieve good perceptual reconstruction.</li>
           </ul>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Choosing which recording method to apply over each target is crucial.
+            A good soundscape capture is based over a mix and match of different recording methods.
           </p>
         </div>
       </div>
