--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -119,9 +119,13 @@
               <li><a href="" target="_blank"><b>Stage 1: Acoustic Fingerprint of the Vehicle</b></a></li>
               <ul>
                 <li><a href="" target="_blank"><b>Definition of Automotive Sound Targets</b></a></li>
+                <li><a href="" target="_blank"><b>Impulse Response Capture</b></a></li>
                 <li><a href="" target="_blank"><b>Multichannel Recording Solutions</b></a></li>
               </ul>
               <li><a href="" target="_blank"><b>Stage 2: Studies over the Virtual Acoustic Enviroment</b></a></li>
+              <ul>
+                <li><a href="" target="_blank"><b>Analysis of the Vehicle Acoustic Enviroment</b></a></li>
+              </ul>
               <li><a href="" target="_blank"><b>Stage 3: In-situ Installation</b></a></li>
             </ul>
 
@@ -244,6 +248,21 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
+          <h5>Impulse Response Capture</h5>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
           <h5>Multichannel Recording Solutions</h5>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
@@ -280,6 +299,22 @@
       </div>
     </div>
   </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <h5>Analysis of the Vehicle Acoustic Enviroment</h5>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
