--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -233,7 +233,7 @@
           <ul>
             <li><b>Vehicle Acoustic Enviroment:</b> impulse response of the car</li>
             <li><b>Vehicle Physical Sounds:</b> tier/road sound, aerodynamic noise</li>
-            <li><b>Vehicle Mechanical Sounds:</b> ICE engine noises, vehicle speed, throttle opening, gearswitch, doors opening and other gadget sounds</li>
+            <li><b>Vehicle Mechanical Sounds:</b> ICE engine noises, vehicle speed, throttle opening, gearswitch,  air-conditioning, doors opening and other gadget sounds</li>
             <li><b>Vehicle Electric Sounds:</b> EV engine noises, battery cooling</li>
             <li><b>Vehicle External Sounds:</b> engine noises, tier/road</li>
           </ul>
@@ -416,6 +416,7 @@
                     Comparing
                     Transaural, Ambisonics and Stereo"</b></i></a></li>
             <li><a href="https://hal.science/hal-00463369/document"><i><b>2009, J-F. Sciabica, M-C. Bezat, V. Roussarie, R. Kronland-Martinet, S. Ystad - "Towards the timbre modeling of interior car sound"</b></i></a></li>
+            <li><a href="https://www.mdpi.com/2076-3298/5/4/44"><i><b>2017, Y. Soeta, Y. Sakamoto - "An Exploratory Analysis of Sound Field Characteristics using the Impulse Response in a Car Cabin"</b></i></a></li>
             <li><a href="https://hal.science/hal-03324608/document"><i><b>2019, S. Denjean, R. Kronland-Martinet, V. Roussarie, S. Ystad - "Zero-Emission Vehicles Sonification Strategy Based on Shepard-Risset Glissando"</b></i></a></li>
             <li><a href="https://hal.science/hal-03456711/file/I3DA_SpatialSoundDesign_DUPRE_FinalSubmission.pdf"><i><b>2021, T. Dupré, S. Denjean, M. Aramaki, R. Kronland-Martinet - "Spatial Sound Design in a Car Cockpit: Challenges and
                     Perspectives"</b></i></a></li>
