--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -407,6 +407,7 @@
             <strong>Automotive</strong>
           </h5>
           <ul>
+            <li><a href="http://pcfarina.eng.unipr.it/ASK/home.htm"><i><b>Angelo Farina - Applications of the Auralization technique to car audio systems</b></i></a></li>
             <li><a href="https://www.academia.edu/4958143/SUBJECTIVE_COMPARISON_BETWEEN_STEREO_DIPOLE_AND_3D_AMBISONIC_SURROUND_SYSTEMS_FOR_AUTOMOTIVE_APPLICATIONS"><i><b>1999, A. Farina, E. Ugolotti - "Subjective comparison between Stereo
                     Dipole and
                     3D
