--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -231,9 +231,9 @@
           <br>
           <br>
           <ul>
-            <li><b>Vehicle Acoustic Enviroment:</b> impulse response of the car</li>
+            <li><b>Vehicle Acoustic Enviroment:</b> impulse responses of the cabin</li>
             <li><b>Vehicle Physical Sounds:</b> tier/road sound, aerodynamic noise</li>
-            <li><b>Vehicle Mechanical Sounds:</b> ICE engine noises, vehicle speed, throttle opening, gearswitch,  air-conditioning, doors opening and other gadget sounds</li>
+            <li><b>Vehicle Mechanical Sounds:</b> ICE engine noises, vehicle speed, throttle opening, gearswitch, air-conditioning, doors opening and other gadget sounds</li>
             <li><b>Vehicle Electric Sounds:</b> EV engine noises, battery cooling</li>
             <li><b>Vehicle External Sounds:</b> engine noises, tier/road</li>
           </ul>
@@ -251,7 +251,16 @@
           <h5>Impulse Response Capture</h5>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
-
+            The frequency response allows to view both the module spectrum and the phase spectrum.
+            By obtaining the frequency response, we actually cut out all that part of the transfer function that concerns time, i.e. the transient of that system.
+            Therefore should be underline that the frequency response gives the behavior of the filter in stationary conditions,
+            i.e. when some time has passed and the system has settled.
+            <br>
+            <br>
+            In summary, the approach to the study of an environment through the analysis of its natural modes is true and is valid for the stationarity conditions of that system,
+            i.e. when sufficient time has passed for the family of standing waves to have established itself at interior between the two walls.
+            The impulse response still has all the information of the system,
+            but when obtaining the frequency response, only those relating to the stationary part of the system can be seen.
           </p>
         </div>
       </div>
