--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -318,7 +318,11 @@
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
             The statistical analysis approach starts from the fact that the energy in a space is distributed ergotically, i.e. without particular internal organisations.
-            The description of an acoustic response in these terms uses quantities that summarize the space in a macroscopic way, and define certain properties for us.
+            The description of an acoustic response in these terms uses quantities that summarize the space in a macroscopic way and define certain properties.
+            <br>
+            <br>
+            The ISO 3382 standards describe the measurement procedure, the instrumentation necessary for detection,
+            the number of measurement positions and the criterion for evaluating the collected data.
           </p>
         </div>
       </div>
