--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -124,7 +124,8 @@
               </ul>
               <li><a href="" target="_blank"><b>Stage 2: Studies over the Virtual Acoustic Enviroment</b></a></li>
               <ul>
-                <li><a href="" target="_blank"><b>Statistical Analysis of the Cabin Acoustic Enviroment</b></a></li>
+                <li><a href="" target="_blank"><b>Analysis of the Cabin Acoustic Enviroment</b></a></li>
+                <li><a href="" target="_blank"><b>Statistical Descriptors</b></a></li>
               </ul>
               <li><a href="" target="_blank"><b>Stage 3: In-situ Installation</b></a></li>
             </ul>
@@ -334,7 +335,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
-          <h5>Statistical Analysis of the Cabin Acoustic Enviroment</h5>
+          <h5>Analysis of the Cabin Acoustic Enviroment</h5>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
             The statistical analysis approach starts from the fact that the energy in a space is distributed ergotically, i.e. without particular internal organisations.
