--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -339,7 +339,18 @@
           <h5>Statistical Descriptors</h5>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
-
+          <ul>
+            <li><b>ITDG, Initial time delay gap:</b> delay time of the first reflection, i.e. the time between the direct sound and the first reflection.
+              Assuming of course that there is direct sound.
+              The optimal values ​​for the ITDG vary depending on the space.
+              Typically for speech, an ITDG of less than 50ms is preferred. Magic value for ITDG is around 30 ms.</li>
+            <li><b></b></li>
+            <li><b></b></li>
+            <li><b></b></li>
+            <li><b></b></li>
+            <li><b></b></li>
+            <li><b></b></li>
+          </ul>
           </p>
         </div>
       </div>
