--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -344,8 +344,15 @@
               Assuming of course that there is direct sound.
               The optimal values ​​for the ITDG vary depending on the space.
               Typically for speech, an ITDG of less than 50ms is preferred. Magic value for ITDG is around 30 ms.</li>
-            <li><b></b></li>
-            <li><b></b></li>
+            <li><b>Haas effect:</b> If the contributions to the direct sound arrive within 35 ms, therefore the ITDG is equal to or less than this value, all contents are integrated as part of the direct sound. These events are incorporated as the
+              same sound event. If the contributions arrive after an interval of about 80 ms, the uniformity of a sound is broken and we hear the echo.
+              This size is very important, because it is one of those parameters called intimacy.
+              Above a certain value we will have the sensation of a larger environment. From a qualitative point of view, it is important that the first reflections
+              come from the side walls to have a greater pleasantness of the space.
+              This is called lateral asymmetry or interaural coherence.</li>
+            <li><b>BR - Bass Ratio:</b> It expresses a relationship between reverberation times taken at specific frequencies.
+              This value gives us indications of the fullness of the sound in the medium-low register.
+              Typically the best rooms are those that have a BR between 1.2 and 1.25. (BR = RT(125Hz) + RT(250Hz) / RT(500Hz) + RT(1kHz))</li>
             <li><b></b></li>
             <li><b></b></li>
             <li><b></b></li>
