--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -353,7 +353,12 @@
             <li><b>BR - Bass Ratio:</b> It expresses a relationship between reverberation times taken at specific frequencies.
               This value gives us indications of the fullness of the sound in the medium-low register.
               Typically the best rooms are those that have a BR between 1.2 and 1.25. (BR = RT(125Hz) + RT(250Hz) / RT(500Hz) + RT(1kHz))</li>
-            <li><b></b></li>
+            <li><b>Brilliance:</b> It has a similar definition to BR but on different frequencies. Brilliance = RT(500Hz) + RT(1kHz) / RT(2kHz) + RT(4kHz)
+              Brilliance and Bass Ratio describe the brightness of the environment on an acoustic level, i.e. how much medium-low and medium-high contribution there is.
+              These two parameters are obviously linked to the materials of the space. Very
+              smooth and rigid materials increase the Brilliance parameters, while wood contributes to BR.
+              Wood has the ability to preserve the medium-low region of the spectrum (depending on the essence and finish of the wood it changes a lot for
+              the resonator qualities). These two parameters are evaluated for acoustic adaptation works.</li>
             <li><b></b></li>
             <li><b></b></li>
             <li><b></b></li>
