--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -340,7 +340,7 @@
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><b>ITDG, Initial time delay gap:</b> delay time of the first reflection, i.e. the time between the direct sound and the first reflection.
+            <li><b>ITDG (Initial time delay gap):</b> delay time of the first reflection, i.e. the time between the direct sound and the first reflection.
               Assuming of course that there is direct sound.
               The optimal values ​​for the ITDG vary depending on the space.
               Typically for speech, an ITDG of less than 50ms is preferred. Magic value for ITDG is around 30 ms.</li>
@@ -359,8 +359,14 @@
               smooth and rigid materials increase the Brilliance parameters, while wood contributes to BR.
               Wood has the ability to preserve the medium-low region of the spectrum (depending on the essence and finish of the wood it changes a lot for
               the resonator qualities). These two parameters are evaluated for acoustic adaptation works.</li>
-            <li><b></b></li>
-            <li><b></b></li>
+            <li><b>D50 (Definition):</b> ratio between useful energy and total energy.
+              The useful energy in this case ranges from 0 to 50 ms, while the total energy ranges from 0 to infinity. In the case of speech the D50 must be greater than 0.5.
+              In the first 50ms there must be at least half of the total energy for speech to be intelligible.</li>
+            <li><b>C50/C80 (Clarity):</b> they are defined as the ratio of useful energy to harmful energy. Now the measures are logarithmic.
+            They are used for the intelligibility of speech (C50) and music (C80). The C50 needs all articulations to be audible.
+            For music the C80 is fine as the articulations are slower than speech.
+            The level of intelligibility can be even lower than speech.
+          <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html"><b>Optimal values ​​for the C50 and C80</b></a>.</li>
             <li><b></b></li>
           </ul>
           </p>
