--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -363,10 +363,18 @@
               The useful energy in this case ranges from 0 to 50 ms, while the total energy ranges from 0 to infinity. In the case of speech the D50 must be greater than 0.5.
               In the first 50ms there must be at least half of the total energy for speech to be intelligible.</li>
             <li><b>C50/C80 (Clarity):</b> they are defined as the ratio of useful energy to harmful energy. Now the measures are logarithmic.
-            They are used for the intelligibility of speech (C50) and music (C80). The C50 needs all articulations to be audible.
-            For music the C80 is fine as the articulations are slower than speech.
-            The level of intelligibility can be even lower than speech.
-          <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html"><b>Optimal values ​​for the C50 and C80</b></a>.</li>
+              They are used for the intelligibility of speech (C50) and music (C80). The C50 needs all articulations to be audible.
+              For music the C80 is fine as the articulations are slower than speech.
+              The level of intelligibility can be even lower than speech.
+              <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html"><b>Optimal values ​​for the C50 and C80</b></a>.
+            </li>
+            <li><b>Spatial Impression:</b></li>
+            <li><b>Center Time (ts):</b></li>
+            <li><b>Acoustic reinforcement (G[dB]):</b> measure of the acoustic amplification introduced through an amplification apparatus compared with the response of the environment to a sound source without amplification acoustics (similar to the
+              concept of transparent amplification, i.e. an attitude that depends on various factors).
+              The acoustic reinforcement index gives indications on an acoustic apparatus that you do not want to interfere too much with the natural source.
+            there is a standard that defines two possible measurement criteria for this acoustic reinforcement index: background noise and the energy that arrives from the amplified source in relation to the energy that arrives without amplification at 10 meters away.
+            G >= -4dB for rooms intended for music; G >= +4dB for rooms intended for speech (intelligibility).</li>
             <li><b></b></li>
           </ul>
           </p>
