--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -368,13 +368,30 @@
               The level of intelligibility can be even lower than speech.
               <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html"><b>Optimal values ​​for the C50 and C80</b></a>.
             </li>
-            <li><b>Spatial Impression:</b></li>
-            <li><b>Center Time (ts):</b></li>
+            <li><b>Spatial Impression:</b> Spatial impression is one of the most important characteristics evaluated.
+              To have a correct sensation of spatiality, the ITDGs must not exceed 80 ms and must reach the listener from lateral directions, because this increases the perception of asymmetry of space. The intensity relationships between first
+              reflections and direct sound must respect the laws of the precedence effect (Haas effect).
+              From a frequency point of view, the most important frequency bands for the spatial impression are those with the octave band at 125 Hz (warm sound) and the part at 1000 Hz (opening band), which contributes to giving a spatial presence
+              of the sound, higher presence front. While the 125 Hz band helps create an enveloping sound, the band around 1000 Hz is linked to the feeling of openness of the sound. The impression of spatiality is closely linked to interaural
+              coherence. Low interaural coherence from a larger spatial environment. Asymmetric space = low interaural coherence.
+              We like symmetry from a spatial point of view, but from an acoustic point of view we don't like it very much. The more different the signals that reach the two ears, the more we seem to be in an open space.
+              There are several parameters for the coherence of the signal between two ears, including ITACC or inter aural cross correlation.
+              All these parameters are generally recorded with Dummy-Heads.</li>
+            <li><b>Center Time (ts):</b> This definition starts from the assumption that useful energy decays in the first 50/80 ms.
+              But not in all situations this data is the same.
+              Therefore another parameter is defined, namely the Center Time:
+              barycentric time of the response to the impulse, i.e. it is the time that separates 50% of the energy before an instant and after an instant,
+              therefore identifying half of an IR from the energetic point of view, therefore the time spent which, I have been in dress from 50% of the energy.
+              Smaller ts -> more compact IR -> energy on first reflections.
+              More right ts -> longer reverberation, energy spread on the diffuse part (tail).
+              An environment that is too dry is not perceived as comfortable, so it is good that a certain environment has a certain spatiality, although it is good that the contribution is concentrated at the beginning.
+            </li>
             <li><b>Acoustic reinforcement (G[dB]):</b> measure of the acoustic amplification introduced through an amplification apparatus compared with the response of the environment to a sound source without amplification acoustics (similar to the
               concept of transparent amplification, i.e. an attitude that depends on various factors).
               The acoustic reinforcement index gives indications on an acoustic apparatus that you do not want to interfere too much with the natural source.
-            there is a standard that defines two possible measurement criteria for this acoustic reinforcement index: background noise and the energy that arrives from the amplified source in relation to the energy that arrives without amplification at 10 meters away.
-            G >= -4dB for rooms intended for music; G >= +4dB for rooms intended for speech (intelligibility).</li>
+              there is a standard that defines two possible measurement criteria for this acoustic reinforcement index: background noise and the energy that arrives from the amplified source in relation to the energy that arrives without
+              amplification at 10 meters away.
+              G >= -4dB for rooms intended for music; G >= +4dB for rooms intended for speech (intelligibility).</li>
             <li><b></b></li>
           </ul>
           </p>
