--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -368,7 +368,7 @@
               The level of intelligibility can be even lower than speech.
               <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_08_descrittori_statistici_relativi_all_energia.html"><b>Optimal values ​​for the C50 and C80</b></a>.
             </li>
-            <li><b>Spatial Impression:</b> Spatial impression is one of the most important characteristics evaluated.
+            <li><b>Spatial Impression:</b> is one of the most important characteristics evaluated.
               To have a correct sensation of spatiality, the ITDGs must not exceed 80 ms and must reach the listener from lateral directions, because this increases the perception of asymmetry of space. The intensity relationships between first
               reflections and direct sound must respect the laws of the precedence effect (Haas effect).
               From a frequency point of view, the most important frequency bands for the spatial impression are those with the octave band at 125 Hz (warm sound) and the part at 1000 Hz (opening band), which contributes to giving a spatial presence
