--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -262,6 +262,14 @@
             i.e. when sufficient time has passed for the family of standing waves to have established itself at interior between the two walls.
             The impulse response still has all the information of the system,
             but when obtaining the frequency response, only those relating to the stationary part of the system can be seen.
+            <br>
+            <br>
+            Three approaches are described:
+            <br>
+            <br>
+            <li><b>Modal:</b></li>
+            <li><b>Geometric:</b></li>
+            <li><b>Statistial:</b> above the Schroeder frequency the statistical approach makes more sense as the field behaves in a diffuse manner.</li>
           </p>
         </div>
       </div>
