--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -267,6 +267,7 @@
             Three approaches are described:
             <br>
             <br>
+            <ul class="mbr-text mbr-fonts-style display-7">
             <li><b>Modal:</b> method applies to simple systems such as string, pipe or wall.</li>
             <li><b>Geometric:</b> the propagation of the acoustic field is treated as if it were governed by rays.</li>
             <li><b>Diffuse Field:</b> it is a statistical approach, the acoustic field is evaluated through the hypothesis that after some time from the initial conditions,
