--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -267,13 +267,14 @@
             Three approaches are described:
             <br>
             <br>
-            <ul class="mbr-text mbr-fonts-style display-7">
+          <ul class="mbr-text mbr-fonts-style display-7">
             <li><b>Modal:</b> method applies to simple systems such as string, pipe or wall.</li>
-            <li><b>Geometric:</b> the propagation of the acoustic field is treated as if it were governed by rays.</li>
+            <li><b>Geometric:</b> the propagation of the acoustic field is treated as if it were governed by rays.
+              Could be usefull during the designing stage when the vehicle is still not available</li>
             <li><b>Diffuse Field:</b> it is a statistical approach, the acoustic field is evaluated through the hypothesis that after some time from the initial conditions,
               the energy has spread and distributed homogeneously throughout the space and therefore some quantities that describe the acoustic field in a macroscopic way.
               Above the Schroeder frequency the statistical approach makes more sense as the field behaves in a diffuse manner.</li>
-          </p>
+            </p>
         </div>
       </div>
     </div>
