--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -264,7 +264,7 @@
             but when obtaining the frequency response, only those relating to the stationary part of the system can be seen.
             <br>
             <br>
-            Three approaches are described:
+            Three approaches for the acousttic analysis are described:
             <br>
             <br>
           <ul class="mbr-text mbr-fonts-style display-7">
