--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -170,7 +170,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/automotive_immersive_sound/soundscape_design_process.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Proposed approach for soundscape design developement in car cockpit adapted from <a
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Proposed approach for soundscape design developement from <a
                 href="https://www.researchgate.net/publication/317617940_Spatial_Audio_for_Soundscape_Design_Recording_and_Reproduction"><i><b>J. Y. Hong, J. He, B. Lam, R. Gupta, W-S. Gan - "Spatial Audio for Soundscape Design: Recordingand
                     Reproduction" (2017)</b></i></a></p>
           </div>
