--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -266,7 +266,7 @@
             Multichannel solutions have been developed over the years that can be categorized in three approaches:
             <br>
             <br>
-          <ul>
+          <ul class="mbr-text mbr-fonts-style display-7">
             <li><b>Direct:</b> those methods are the most commonly used by sound engineers and consist in manually arranging microphones and loudspeakers based on heuristics. Those methods will not be further detailed here because microphone and
               loudspeaker layouts are interdependent.</li>
             <li><b>Non-parametric:</b> those methods usually use linear transformation such as ambisonic. Input channels are encoded in the spherical harmonic domain and can further be decoded on any loudspeaker configuration</li>
@@ -326,7 +326,7 @@
           <h5>Statistical Descriptors</h5>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
-          <ul>
+          <ul class="mbr-text mbr-fonts-style display-7">
             <li><b>ITDG (Initial time delay gap):</b> delay time of the first reflection, i.e. the time between the direct sound and the first reflection.
               Assuming of course that there is direct sound.
               The optimal values ​​for the ITDG vary depending on the space.
